<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
            name="viewModel"
            type="barbarich.ilya.proplayer.ui.info.InfoPlayerViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_description"
                android:orientation="horizontal"
                android:layout_margin="@dimen/spacing_normal_16">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    app:imgUrl="@{viewModel.selectedPlayer.image_big}"
                    tools:src="@color/colorStar"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/ll_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="@dimen/spacing_small_8"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_nickname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_huge_24"
                            android:maxLines="1"
                            android:text="@{viewModel.selectedPlayer.nick_name}"
                            tools:text="S1mple" />

                        <TextView
                            android:id="@+id/tv_fullname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_large_20"
                            android:maxLines="1"
                            android:text="@{viewModel.selectedPlayer.fullname}"
                            tools:text="Aleksandr Kostyliev" />
                    </LinearLayout>

                    <RatingBar
                        android:id="@+id/startProPlayer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/ratingBarStyleSmall"
                        app:layout_constraintLeft_toRightOf="@+id/ll_title"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/ll_title"
                        app:layout_constraintBottom_toBottomOf="@+id/ll_title"
                        android:progressTint="@color/colorStar"
                        android:rating="@{viewModel.selectedPlayer.rating}"/>

                    <LinearLayout
                        android:id="@+id/ll_stats_line_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ll_title"
                        app:layout_constraintBottom_toTopOf="@id/ll_stats_line_2"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ll_title"
                            style="@style/LinearLayout.Stats">

                            <TextView
                                android:id="@+id/tv_rating_2_0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="1.28"
                                android:text="@{String.valueOf(viewModel.selectedPlayer.rating_2_0)}"
                                style="@style/MyTextView.Stats" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/MyTextView.Info"
                                android:text="@string/stats_rating_2_0" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ll_title"
                            style="@style/LinearLayout.Stats">

                            <TextView
                                android:id="@+id/tv_dpr"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{String.valueOf(viewModel.selectedPlayer.dpr)}"
                                style="@style/MyTextView.Stats"
                                tools:text="1.28" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/MyTextView.Info"
                                android:text="@string/stats_dpr" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ll_title"
                            style="@style/LinearLayout.Stats">

                            <TextView
                                android:id="@+id/tv_kast"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/MyTextView.Stats"
                                android:text="@{String.valueOf(viewModel.selectedPlayer.kast)}"
                                tools:text="1.28" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/MyTextView.Info"
                                android:text="@string/stats_kast" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_stats_line_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ll_stats_line_1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ll_title"
                            style="@style/LinearLayout.Stats">

                            <TextView
                                android:id="@+id/tv_rating_impact"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/MyTextView.Stats"
                                android:text="@{String.valueOf(viewModel.selectedPlayer.impact)}"
                                tools:text="1.28" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/MyTextView.Info"
                                android:text="@string/stats_impact" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ll_title"
                            style="@style/LinearLayout.Stats">

                            <TextView
                                android:id="@+id/tv_adr"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/MyTextView.Stats"
                                android:text="@{String.valueOf(viewModel.selectedPlayer.adr)}"
                                tools:text="1.28" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/MyTextView.Info"
                                android:text="@string/stats_adr" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ll_title"
                            style="@style/LinearLayout.Stats">

                            <TextView
                                android:id="@+id/tv_kpr"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/MyTextView.Stats"
                                android:text="@{String.valueOf(viewModel.selectedPlayer.kdp)}"
                                tools:text="1.28" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/MyTextView.Info"
                                android:text="@string/stats_kpr" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ll_stats"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/description_example_s1mle"
                android:text="@{String.valueOf(viewModel.selectedPlayer.description)}"
                style="@style/MyTextView.Description" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>